--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/DigitalDoodleWeb.loader.js";
       var config = {
-        dataUrl: buildUrl + "/DigitalDoodleWeb.data",
-        frameworkUrl: buildUrl + "/DigitalDoodleWeb.framework.js",
-        codeUrl: buildUrl + "/DigitalDoodleWeb.wasm",
+        dataUrl: buildUrl + "/DigitalDoodleWeb.data.unityweb",
+        frameworkUrl: buildUrl + "/DigitalDoodleWeb.framework.js.unityweb",
+        codeUrl: buildUrl + "/DigitalDoodleWeb.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "CarTest",
